--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   percent_indicator: ^4.2.2
   sizer: ^2.0.15
+  provider: ^6.0.0
+  audioplayers: ^0.20.1
 
 dev_dependencies:
   flutter_test:
